src/main/java/com/example/updatemebook/errors/UniqueObjectException.java
package com.example.updatemebook.errors;

public class UniqueObjectException extends RuntimeException{

    public UniqueObjectException(String message){
        super(message);
    }
}
